[package]
name = "disk"
version = "0.1.1"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "(De)serialize files to/from disk"
documentation = "https://docs.rs/disk"
repository = "https://github.com/hinto-janai/disk"
readme = "README.md"
keywords = ["disk", "file", "toml", "json", "bincode"]
license = "MIT"

[features]
default     = []
toml        = ["toml_edit"]
json        = ["serde_json"]
yaml        = ["serde_yaml"]
pickle      = ["serde-pickle"]
messagepack = ["rmp-serde"]
plain       = ["serde_plain"]
empty       = []
full        = ["toml", "json", "yaml", "log", "bincode", "pickle", "messagepack", "bson", "plain", "empty", "postcard", "ron"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Required.
anyhow      = "1.0.70"
#disk_derive = { path = "../disk_derive" }
directories = "5.0.0"
serde       = { version = "1.0.160", features = ["derive"] }
const_format = { version = "0.2.30", features = ["rust_1_51", "assertcp", "rust_1_64"] }
flate2 = "1.0.25"
lazy_static = "1.4.0"
paste = "1.0.12"

# Optional.
log          = { version = "0.4.17", optional = true }
bincode      = { version = "1.3.3", optional = true }
toml_edit    = { version = "0.19.8", features = ["serde"], optional = true }
serde_json   = { version = "1.0.96", optional = true }
serde_yaml   = { version = "0.9.21", optional = true }
serde-pickle = { version = "1.1.1", optional = true }
rmp-serde    = { version = "1.1.1", optional = true }
bson         = { version = "2.6.1", optional = true }
serde_plain  = { version = "1.0.1", optional = true }
postcard     = { version = "1.0.4", features = ["alloc", "use-std"], default-features = false, optional = true }
ron          = { version = "0.8.0", optional = true }
